--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "url": "https://github.com/puikinsh/gentelella/issues"
   },
   "homepage": "https://github.com/puikinsh/gentelella#readme",
-  "devDependencies": {
-    "browser-sync": "^2.26.7",
+  "devDependencies": {},
+  "dependencies": {
+    "browser-sync": "^2.27.4",
+    "gentelella": "^1.4.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^2.0.0",
     "gulp-ruby-sass": "^4.0.0",
